--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "deploy":"nvm use 16.13.0 && firebase deploy",
+        "doit": "nvm use 14.17.6 && vue-cli-service serve"
     },
     "dependencies": {
         "core-js": "^3.6.5",
